
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
    
    <EditText
        android:id="@+id/YemeklerAdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleAd" >

    </EditText>
    
    <EditText
        android:id="@+id/YemeklerFiyatEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleFiyat" >

    </EditText>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <Button
            android:id="@+id/kaydetBtnYemekler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/kaydetButton" />
        
        <Button
            android:id="@+id/gnclleBtnYemekler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/guncelleButton" />
        
        <Button
            android:id="@+id/silBtnYemekler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/silButton" />

    </LinearLayout>
    
    <ListView
        android:id="@+id/SiparislerListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice" >

    </ListView>

</LinearLayout>
